k8s/shadow/shadow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-shadow
  labels:
    app: aceest
    version: shadow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aceest
      version: shadow
  template:
    metadata:
      labels:
        app: aceest
        version: shadow
    spec:
      containers:
      - name: aceest-app
        image: yourusername/aceestfitnessgym:1.1.0
        ports:
        - containerPort: 5000
