k8s/shadow/stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-stable
  labels:
    app: aceest
    version: stable
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aceest
      version: stable
  template:
    metadata:
      labels:
        app: aceest
        version: stable
    spec:
      containers:
      - name: aceest-app
        image: yourusername/aceestfitnessgym:1.0.0
        ports:
        - containerPort: 5000
